--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -16,6 +17,7 @@
     "@types/react-router-dom": "^5.1.3",
     "framer-motion": "^1.8.4",
     "ionicons": "^5.0.0",
+    "lowdb": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
