--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.0",
     "framer-motion": "^1.8.4",
     "ionicons": "^5.0.0",
     "lowdb": "^1.0.0",
@@ -23,7 +24,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "3.7.4"
+    "typescript": "3.7.4",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
