--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "3.7.4",
+    "use-force-update": "^1.0.7",
     "uuid": "^7.0.1"
   },
   "scripts": {
