--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "@types/uuid": "^7.0.0",
     "framer-motion": "^1.8.4",
     "ionicons": "^5.0.0",
     "lowdb": "^1.0.0",
@@ -25,8 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "3.7.4",
-    "use-force-update": "^1.0.7",
-    "uuid": "^7.0.1"
+    "use-force-update": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
